# pycreaturestools

./: .gitignore  README.md  c16dump.py  caossyntaxdumper.py  cobdump.py  creaturescavesdownloader.py  creaturescavesextractor.py  glstdumper.py  lint.sh  new_breed_installer_extract.py  parse_creaturesarchive.py  read_aphro.py  setup.cfg  setup.py  sfcdumperv2.py  translate_voice.py
.github/workflows/: build.yml
creaturestools/: _image_utils.py  _io_utils.py  _simplelexer.py  agents.py  babel.py  bodydata.py  caos.py  caos2pray.py  cobs.py  creatures0.py  creaturesarchive.py  exceptions.py  genetics.py  mfc.py  mngmusic.py  netbabel.py  pcaps.py  pray.py  praysource.py  sprites.py
scripts/: lint.sh  test.sh
tests/: test_bodydata.py  test_caos2pray.py  test_pray.py  test_praysource.py  test_simplelexer.py  test_sprites.py
