[metadata]
name = pycreaturestools
version = 0.1
description = Python tools for working with the Creatures series of games
long_description = file: README.md
url = https://github.com/openc2e/pycreaturestools
license = LGPLv2+
classifiers =
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3
install_requires =
    Pillow
    
[options.extras_require]
dev =
    black
    isort>=5
test =

[options.entry_points]
console_scripts =
    babeldumper = creaturestools.bin.babeldumper:main
    cobdumper = creaturestools.bin.cobdumper:main
    gen2json = creaturestools.bin.gen2json:main
    praybuilder = creaturestools.bin.praybuilder:main
    praycrush = creaturestools.bin.praycrush:main
    praydumper = creaturestools.bin.praydumper:main
    spritedumper = creaturestools.bin.spritedumper:main